%%{init: {'theme': 'base', 'themeVariables': { 'primaryColor': '#ffffff', 'edgeLabelBackground':'#ffffff', 'tertiaryColor': '#ffffff'}}}%%
classDiagram
    direction TB

    %% ====================
    %% Noyau Utilisateurs & Rôles
    %% ====================
    class Utilisateur {
        +int id
        +string prenom
        +string nom
        +string email
        +string password
        
    }

    class Role {
        +int id
        +string name
    }

    class Etudiant {
        +enum niveau_etudes
        +string photo
        +text bio
        +string github
        +string linkedin
        +int vues
    }

    class Entreprise {
        +string nom_entreprise
        +string adresse
        +string email_contact
        +text bio
        +string registre_commerce
        +string logo
        +enum taille
        +int vues
    }

    %% ====================
    %% Tables de Référence / Nomenclature
    %% ====================
    class Ville {
        +int id
        +string nom
    }

    class Etablissement {
        +int id
        +string nom
    }

    class Filiere {
        +int id
        +string nom
    }

    class Secteur {
        +int id
        +string nom
    }

    class Competence {
        +int id
        +string nom
    }

    %% ====================
    %% Entités Métier (Offres & Candidatures)
    %% ====================
    class Offre {
        +int id
        +string titre
        +text description
        +enum type_stage
        +string duree
        +enum remuneration
        +enum format
        +text responsabilites
        +text profil_recherche
        +enum status
        +date date_debut
        +date date_fin
    }

    class Candidature {
        +int id
        +enum statut
        +string telephone
        +string photo
        +string portfolio_url
        +text message_motivation
        +datetime date_postulation
    }

    class DocumentCV {
        +int id
        +string file_path
    }

    class Feedback {
        +int id
        +text texte
        +int note
        +boolean valide
    }

    class Favoris {
        +int id
    }

    class Notification {
        +int id
        +string type
        +string title
        +string message
        +json data
        +datetime read_at
    }

    %% ====================
    %% Héritage (Logique Métier)
    %% ====================
    Utilisateur <|-- Etudiant
    Utilisateur <|-- Entreprise

    %% ====================
    %% Relations & Cardinalités (Sans flèches d'association)
    %% ====================
    
    %% Rôles
    Utilisateur "*" -- "*" Role : possède

    %% Localisation (Nomenclatures)
    Ville "1" -- "*" Etudiant : réside
    Ville "1" -- "*" Entreprise : située
    Ville "1" -- "*" Offre : localisée

    %% Nomenclatures Étudiant
    Etablissement "1" -- "*" Etudiant : héberge
    Filiere "1" -- "*" Etudiant : inscrit dans

    %% Nomenclatures Entreprise & Offre
    Secteur "1" -- "*" Entreprise : opère dans
    Secteur "1" -- "*" Offre : appartient à

    %% Étudiant Métier
    Etudiant "1" -- "*" Candidature : postule
    Etudiant "1" -- "*" Favoris : ajoute
    Etudiant "1" -- "*" DocumentCV : possède
    Etudiant "1" -- "*" Feedback : écrit
    
    %% Entreprise Métier
    Entreprise "1" -- "*" Feedback : écrit
    Entreprise "1" -- "*" Offre : publie
    
    %% Offre Métier
    Offre "1" -- "*" Candidature : concerne
    Offre "1" -- "*" Favoris : est ciblé par
    Offre "*" -- "*" Competence : requiert
    
    %% Modération & Services transverses
    Utilisateur "1" -- "*" Feedback : modère
    DocumentCV "1" -- "*" Candidature : associé à

    %% Notifications
    Etudiant "1" -- "*" Notification : est notifié
    Entreprise "1" -- "*" Notification : est notifiée
